[package]
name = "tcp-chat"
version = "0.1.0"
edition = "2021"
description = "Simple tcp chat program"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"